Fix bottom of FilterColumn sort dropdown getting cut off
Happens when 0-1 cards visible due to overflow: hidden (daisyUI). This is needed when collapse is closed to prevent reserving space for contents but not when it's open.

--- a/src/main.css
+++ b/src/main.css
@@ -10,6 +10,12 @@
     @apply p-4;
 }
 
+/* Allow overflow when collapse is open */
+/* Prevents FilterColumn sort dropdown getting cut off when only 1 item */
+.collapse:has(input[type="checkbox"]:checked) {
+    @apply overflow-visible;
+}
+
 .max-w-90 {
     max-width: 90%;
 }
